<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SAC it!!!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">NEW GAME</string>
    <string name="resume_game">RESUME GAME</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="quit_game">Quit Game</string>
    <string name="info">E. Tzorakoleftherakis\nAlex Ansari\nTodd Murphey\nhttp://nxr.northwestern.edu/</string>
    <string name="title_activity_pendulum">Pendulum Balance</string>

    <color name="black">#000000</color>
    <color name="aqua">#00ffff</color>
    <color name="gray">#808080</color>
    <color name="SandyBrown">#F4A460</color>
    <color name="Brown">#BDB76B</color>
    <color name="Red">#FF0000</color>
    <color name="green">#008000</color>
    <color name="white">#FFFFFF</color>
    <color name="LightYellow">#FFFFE0</color>
    <color name="Yellow">#FFFF00</color>

    <string name="title_activity_hopper">Pogo Hopper</string>
    <string name="title_activity_high_score">HighScore</string>

</resources>
