<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"     
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/android2">
    
    
   	<RelativeLayout  
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:gravity="center_vertical"
	    android:orientation="horizontal">


	    <ImageView
	        android:layout_width="100dp"
	        android:layout_height="70dp"
	        android:scaleType="centerInside"
   	    	android:padding="0dp"
	    	android:layout_alignParentRight="true"
	        android:src="@drawable/northwestern"	/>
	    
  		    <ImageView
	        android:layout_width="100dp"
	        android:layout_height="70dp"
	        android:scaleType="centerInside"
	        android:padding="5dp"
	    	android:layout_alignParentLeft="true"
	        android:src="@drawable/nxr"	/>
		        

     </RelativeLayout>
    
    
    
    <LinearLayout android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center_vertical"
          android:gravity="center"
   		  android:orientation="vertical">
  		    
     	 <TextView 
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:text="Select Game"
	        android:gravity="center"  />

	     <Button
	         android:layout_width="200dp"
	         android:layout_height="wrap_content"
	         android:text="@string/title_activity_pendulum" 
	         android:background="@android:drawable/btn_default"
	         android:onClick="pendulumGame"/>
	     
	     <Button
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:text="@string/title_activity_hopper"
	        android:background="@android:drawable/btn_default"
	        android:onClick="hopperGame" />
	           
    </LinearLayout>
	      
    
    <!-- Info here -->
	<RelativeLayout  
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">
		
   		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
			    android:textSize="12sp"
			    android:autoLink="all"
		        android:text="@string/info"
		        android:gravity="bottom|start" />			        

      </RelativeLayout>


</RelativeLayout>
